--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "karma-webpack": "^1.7.0",
     "ts-loader": "^0.8.1",
     "typescript": "^1.8.9",
+    "typings": "^1.3.0",
     "webpack": "^1.12.14"
   },
   "scripts": {
